--- a/action.yml
+++ b/action.yml
@@ -40,7 +40,7 @@ runs:
   steps:
     - name: Run
       run: |
-        pip install -r requirements.txt
+        pip install -r ${{ github.action_path }}/requirements.txt
         python3 -m action
       shell: bash
       env:
