--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,11 +13,11 @@ dataclasses-json = "*"
 [tool.poetry.dev-dependencies]
 pytest = "*"
 
+add-trailing-comma = "*"
 black = "*"
 flake8 = "*"
 flake8-black = "*"
 flake8-coding = "*"
-flake8-commas = "*"
 flake8-isort = "*"
 flake8-quotes = "*"
 isort = {extras = ["pyproject"], version = "*"}
