--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,24 +10,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Setup Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.9.1
-
-      - name: Setup Poetry
-        uses: moneymeets/action-setup-poetry@master
-
-      - name: Restore virtualenv from Poetry cache
-        uses: actions/cache@v2
-        id: poetry-cache
-        with:
-          path: ~/.cache/pypoetry/virtualenvs
-          key: poetry-${{ hashFiles('**/poetry.lock') }}
-
-      - name: Create virtualenv and install dependencies
-        if: steps.poetry-cache.outputs.cache-hit != 'true'
-        run: poetry install
+      - name: Setup Python + Poetry
+        uses: moneymeets/action-setup-python-poetry@master
 
       - name: Linter
         run: poetry run flake8
