chore(test): add pytest-cov

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
           poetry run flake8
 
       - name: Test
-        run: poetry run pytest
+        run: poetry run pytest --cov --cov-branch --cov-fail-under=50
 
       - name: Check requirements
         run: |
