--- a/action.yml
+++ b/action.yml
@@ -38,6 +38,11 @@ inputs:
 runs:
   using: "composite"
   steps:
+    - name: Setup Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.10'
+
     - name: Run
       run: |
         pip install -r ${{ github.action_path }}/requirements.txt
