--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,9 @@ target-version = ["py310"]
 profile = "black"
 line_length = 120
 
+[tool.coverage.run]
+omit = ["test_*.py"]
+
 [build-system]
 requires = ["poetry_core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
