--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = ""
 authors = ["moneymeets <admin@moneymeets.com>"]
 
 [tool.poetry.dependencies]
-python = "~3.12"
+python = "~=3.14.0"
 
 boto3 = "*"
 dataclasses-json = "*"
